[tool.poetry]
name = "ledge-techblog-autopost"
version = "0.1.0"
description = ""
authors = ["sivacchi <hiroki.kh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.7"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
